--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header section -->
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid ">
-            <h1 class="logo">S<span>hoes</span></h1>
+            <h1 class="logo">Sh<span>oes</span></h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
